# pythonprac

20220913/1/: URLS
20220913/2/: URLS
20220920/1/: .prog.py.swo  .prog.py.swp  URLS  prog.py
20220920/2/: URLS  prog.py
20220920/3/: URLS  prog.py
20220927/1/: URLS  prog.py
20220927/2/: URLS  prog.py
20220927/3/: URLS  prog.py
20221004/1/: URLS  prog.py
20221004/2/: URLS  prog.py
20221004/3/: URLS  prog.py
20221004/4/: URLS  prog.py
20221011/1/: URLS  prog.py
20221011/2/: prog.py
20221011/3/: URLS  prog.py
20221018/1/: URLS  prog.py
20221018/2/: URLS  prog.py
20221018/3/: URLS  prog.py
20221025/1/: URLS  prog.py
20221025/2/: URLS  prog.py
20221025/3/: URLS  prog.py
20221101/1/: URLS  prog.py
20221101/2/: URLS  prog.py
20221101/3/: URLS  prog.py
20221108/1/: URLS  prog.py
20221108/2/: URLS  prog.py
20221108/3/: URLS  prog.py
20221115/1/: URLS  prog.py
20221115/2/: URLS  prog.py
20221115/3/: URLS  prog.py
20221122/1/: URLS  prog.py
20221122/2/: URLS  prog.py
20221122/3/: URLS  prog.py
20221129/1/: URLS  prog.py
20221129/2/: URLS  prog.py
20221206/1/: prog.py
20230213/1/: prog.py
20230220/1/: prog.py
20230220/2/: prog.py
20230227/0/: prog1.py  prog2.py
20230227/1/: prog.py
20230306/0/: prog.py  prog1.py
20230306/1/: prog.py
20230313/0/: prog.py
20230313/1/: prog.py  server.py
20230320/1/: prog.py  server.py
20230327/1/: server.py
20230327/2/: prog.py
mood/: .doit.db  .flake8  .pydocstyle  Pipfile  dodo.py
mood/moodserver/: pyproject.toml
mood/moodserver/moodserver/: server.py
(+123 files in other folders)
